# SilverBulletForAI

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
docs/: PLAN.md
rust/: Cargo.toml
rust/sbfa-core/: Cargo.toml
rust/sbfa-core/benches/: benchmarks.rs
rust/sbfa-core/src/: chunker.rs  lib.rs  similarity.rs  task_router.rs
src/sbfa/: __init__.py  config.py  main.py
src/sbfa/a2a/: __init__.py  agent_card.py  protocol.py  registry.py  security.py
src/sbfa/agents/: __init__.py  base.py  claude_agent.py  gemini_agent.py  local_agent.py  openai_agent.py
src/sbfa/db/: __init__.py  client.py  schema.py
src/sbfa/mcp/: manager.py  types.py
src/sbfa/orchestrator/: __init__.py  coordinator.py  router.py
src/sbfa/rag/: __init__.py  embeddings.py  ingestion.py  retrieval.py  store.py
tests/: test_a2a.py  test_agents.py  test_rag.py  test_rust_core.py
